[GStreamer] Video element keeps changing the aspect ratio randomly (when the orientation information is in video's metadata) https://bugs.webkit.org/show_bug.cgi?id=246824 <rdar://problem/101646324>

Reviewed by Xabier Rodriguez-Calvar.

Emit sizeChanged notifications towards the parent player only if the video orientation actually
changed, otherwise the continuous size re-transposition affects the visual rendering of the video
element.

* Source/WebCore/platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp:
(WebCore::MediaPlayerPrivateGStreamer::updateVideoOrientation):
(WebCore::MediaPlayerPrivateGStreamer::setVideoSourceOrientation):

Canonical link: https://commits.webkit.org/257912@main